# ssps-chances-calculator

./: .cruft.json  README.md
.github/workflows/: bump-template.yml  test.yml
backend/: .cruft.json  README.md  pyproject.toml  setup.cfg
backend/.github/workflows/: test.yml
backend/src/: __init__.py  app.py  config.py  db.py  models.py  utils.py
backend/src/strawberry/: schema.py
backend/tests/: test_commit_and_push.py  test_db.py
parser/: .cruft.json  Makefile  README.md  pyproject.toml  setup.cfg
parser/src/: __main__.py  db.py  student.py  test_representation.py
parser/tests/: test_db.py
src/: app.html
