[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "parser"
description = "Parser script for SSPS chances calculator."
version = "0.1.0"
license = "MIT"
authors = []
readme = "README.md"
packages = [ { include = "src" } ]


[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.11.0"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.4"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.5"


[tool.poetry.group.typing.dependencies]
mypy = "~1.7"


[tool.black]
line-length = 120
target-version = ['py310']
