[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "ssps-chances-calculator"
description = "Parser for SSPS chances calculator"
version = "0.1.0"
license = "MIT"
authors = []
packages = [ { include = "src" } ]


[tool.poetry.dependencies]
python = "^3.10"

typing-extensions = "~4.11"


[tool.poetry.group.make.dependencies]
black = "~24"
isort = "~5.13"
pycln = "~2.4"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.7"


[tool.poetry.group.typing.dependencies]
mypy = "~1.9"


[tool.poetry.group.tests.dependencies]
pytest = "~8.1"
pytest-cov = "~5.0"
pytest-mock = "~3.14"
pytest-randomly = "~3.15"
pytest-asyncio = "~0.23"
Faker = "~24.11"


[tool.black]
line-length = 80
target-version = ['py310']
